[gd_scene load_steps=13 format=3 uid="uid://bdcyq5pmnynl0"]

[ext_resource type="Script" path="res://scripts/levels/level.gd" id="1_6d1xw"]
[ext_resource type="PackedScene" uid="uid://os4mlc8qha21" path="res://scenes/player/player.tscn" id="1_r7frc"]
[ext_resource type="AudioStream" uid="uid://c0gvjk3cglsoh" path="res://src/music/battleThemeA.mp3" id="2_ufxnk"]
[ext_resource type="AudioStream" uid="uid://cpu4h5hgd86au" path="res://src/sound/laser.wav" id="3_xvf0a"]
[ext_resource type="PackedScene" uid="uid://v3sl24k8et5h" path="res://scenes/ui/ui.tscn" id="9_2kula"]
[ext_resource type="PackedScene" uid="uid://csly4cralnntm" path="res://scenes/objects/pocket_light.tscn" id="9_whlc6"]
[ext_resource type="Texture2D" uid="uid://bubmmihv0tsp5" path="res://src/graphics/objects/fan.png" id="14_7ngx8"]
[ext_resource type="PackedScene" uid="uid://dxph7t7pe586s" path="res://scenes/objects/box.tscn" id="14_kbjai"]
[ext_resource type="Texture2D" uid="uid://dv6h751cxuaq0" path="res://src/graphics/objects/lid.png" id="15_fvhfy"]
[ext_resource type="PackedScene" uid="uid://x5ksn8jrqprb" path="res://scenes/objects/house.tscn" id="15_yhxw5"]
[ext_resource type="PackedScene" uid="uid://dpn0ixp3ysyl4" path="res://scenes/objects/house_1.tscn" id="16_d6twr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ik0a6"]
size = Vector2(260, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_6d1xw")

[node name="FoneMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ufxnk")
volume_db = -12.49
bus = &"Music"

[node name="AudioLaser" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xvf0a")
bus = &"Sound"

[node name="ObjectUnder" type="Node2D" parent="."]

[node name="Box1" parent="ObjectUnder" instance=ExtResource("14_kbjai")]
position = Vector2(2136, -1566)

[node name="Box2" parent="ObjectUnder" instance=ExtResource("14_kbjai")]
position = Vector2(2088, 3306)

[node name="Box3" parent="ObjectUnder" instance=ExtResource("14_kbjai")]
position = Vector2(2436, 3101)

[node name="Fan" type="Sprite2D" parent="ObjectUnder"]
position = Vector2(-2068, -1556)
texture = ExtResource("14_7ngx8")

[node name="Lid" type="Sprite2D" parent="ObjectUnder"]
position = Vector2(3803, 3114)
rotation = 0.181514
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_fvhfy")

[node name="GateForMonstr" type="Node2D" parent="ObjectUnder"]

[node name="StaticBody2D" type="StaticBody2D" parent="ObjectUnder/GateForMonstr"]
position = Vector2(34, 0)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectUnder/GateForMonstr/StaticBody2D"]
position = Vector2(3513, 3258)
shape = SubResource("RectangleShape2D_ik0a6")

[node name="StaticBody2D2" type="StaticBody2D" parent="ObjectUnder/GateForMonstr"]
position = Vector2(-8194, -1)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectUnder/GateForMonstr/StaticBody2D2"]
position = Vector2(3513, 3258)
shape = SubResource("RectangleShape2D_ik0a6")

[node name="StaticBody2D3" type="StaticBody2D" parent="ObjectUnder/GateForMonstr"]
position = Vector2(1946, -4938)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectUnder/GateForMonstr/StaticBody2D3"]
position = Vector2(3513, 3258)
shape = SubResource("RectangleShape2D_ik0a6")

[node name="StaticBody2D4" type="StaticBody2D" parent="ObjectUnder/GateForMonstr"]
position = Vector2(-6240, -4933)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectUnder/GateForMonstr/StaticBody2D4"]
position = Vector2(3513, 3258)
shape = SubResource("RectangleShape2D_ik0a6")

[node name="House" parent="ObjectUnder" instance=ExtResource("15_yhxw5")]
position = Vector2(-4996, 521)

[node name="House1" parent="ObjectUnder" instance=ExtResource("16_d6twr")]
position = Vector2(5650, 1211)

[node name="Lights" type="Node2D" parent="."]

[node name="LandEnemy" type="Node2D" parent="."]

[node name="Projectlies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_r7frc")]
position = Vector2(362, 851)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)

[node name="PocketLight2" parent="Player" instance=ExtResource("9_whlc6")]
unique_name_in_owner = true
visible = false
position = Vector2(88, 16)

[node name="FlyEnemy" type="Node2D" parent="."]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
color = Color(0.400697, 0.400698, 0.400698, 1)
energy = 0.4
blend_mode = 2

[node name="UI" parent="." instance=ExtResource("9_2kula")]

[node name="Items" type="Node2D" parent="."]

[node name="TimerRedCursor" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="player_entered" from="ObjectUnder/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="ObjectUnder/House" to="." method="_on_house_player_exited"]
[connection signal="player_entered" from="ObjectUnder/House1" to="." method="_on_house_1_player_entered"]
[connection signal="player_exited" from="ObjectUnder/House1" to="." method="_on_house_1_player_exited"]
[connection signal="laser_shot" from="Player" to="." method="_on_player_laser_shot"]
[connection signal="throw_grenade" from="Player" to="." method="_on_player_throw_grenade"]
[connection signal="down_light" from="UI" to="." method="_on_ui_down_light"]
[connection signal="up_light" from="UI" to="." method="_on_ui_up_light"]
[connection signal="timeout" from="TimerRedCursor" to="." method="_on_timer_red_cursor_timeout"]
